@@ -40,6 +40,7 @@ redis.url =  redis://127.0.0.1:6379/9
 redis.prime_style = 1
 
 nginx.servers_pool = http://127.0.0.1
+nginx.userpass = peter:sslers
 
 admin_server = http://127.0.0.1:6543
 
