@@ -14,10 +14,21 @@ http {
 
 
     ## lua
-    lua_package_path  "/path/to/peter_sslers/tools/nginx_lua_library/?.lua;/path/to/peter_sslers/tools/lua-lib/lua-resty-http/lib/?.lua;;";
-    init_by_lua  'require "resty.core"';
-    lua_shared_dict  cert_cache 1m;
+    # initialize the cert_cache to a size
+    # it will be accessed via `nginx.shared.cert_cache`
+    lua_shared_dict  cert_cache 100k;
     lua_code_cache  on;
+    init_by_lua_block {
+        require "resty.core"
+        local ssl_certhandler = require "peter_sslers.ssl_certhandler"
+        ssl_certhandler.initialize()
+    }
+    init_worker_by_lua_block {
+        require "resty.core"
+        local ssl_certhandler = require "peter_sslers.ssl_certhandler"
+        -- cert_cache_duration, lru_cache_duration, lru_maxitems
+        ssl_certhandler.initialize_worker(600, 60, 200)
+    }
 
 
     ## Our FAILOVER SECURE server should grab
@@ -30,16 +41,46 @@ http {
         access_log  /var/log/nginx/foo.example.com/access-https.log;
         error_log  /var/log/nginx/foo.example.com/error-https.log notice;
 
-		## set our cache expiry        
-        location  /ngxadmin/shared_cache/expire  {
-            content_by_lua_block  {
-                local ssl_certhandler = require "ssl_certhandler"
+        location  /.peter_sslers {
+            ## auth setup
+            auth_basic  "peter_sslers";
+            auth_basic_user_file  /webserver/sites/CliquedInDeploy/trunk/config/environments/development/nginx/auths/peter_sslers.htpasswd;
 
-                -- Local cache related
-                local cert_cache = ngx.shared.cert_cache
+            ## enable a cache expiry route
+            location  /.peter_sslers/nginx/shared_cache/expire  {
+                content_by_lua_block  {
+                    -- requirements
+                    local ssl_certhandler = require "peter_sslers.ssl_certhandler"
 
-                ssl_certhandler.expire_ssl_certs(cert_cache)
+                    -- alias functions
+                    local ssl_certhandler_expire = ssl_certhandler.expire_ssl_certs
+                    ssl_certhandler_expire()
+                }
             }
+
+            ## enable a status route
+            location  /.peter_sslers/nginx/shared_cache/status  {
+                content_by_lua_block  {
+                    -- requirements
+                    local ssl_certhandler = require "peter_sslers.ssl_certhandler"
+
+                    -- alias functions
+                    local ssl_certhandler_status = ssl_certhandler.status_ssl_certs
+                    ssl_certhandler_status()
+                }
+            }
+        }
+
+        ssl_certificate_by_lua_block  {
+            -- requirements
+            local ssl_certhandler = require "peter_sslers.ssl_certhandler"
+
+            -- alias functions
+            local ssl_certhandler_set = ssl_certhandler.set_ssl_certificate
+
+            local prime_version = 1
+            local fallback_server = 'http://0.0.0.0:6543'
+            ssl_certhandler_set(prime_version, fallback_server)
         }
 
         ## SSL controls
@@ -62,20 +103,5 @@ http {
         ## this is our default
         ssl_certificate  /path/to/default/fullchain1.pem ;
         ssl_certificate_key  /path/to/default/privkey1.pem ;
-
-        ## this will overwrite
-        ssl_certificate_by_lua_block  {
-            local ssl_certhandler = require "ssl_certhandler"
-
-            -- Local cache related
-            local cert_cache = ngx.shared.cert_cache
-            local cert_cache_duration = 7200 -- 2 hours
-
-            local prime_version = 2
-            local fallback_server = 'http://0.0.0.0:6543'
-            ssl_certhandler.set_ssl_certificate(cert_cache, cert_cache_duration, prime_version, fallback_server)
-
-            return
-        }
     }
 }
